fixed style so landing is centered on mobile

--- a/Shortpoet/VueClient/src/assets/scss/landing/_global-landing.scss
+++ b/Shortpoet/VueClient/src/assets/scss/landing/_global-landing.scss
@@ -14,8 +14,9 @@ $border-radius: .7rem;
   .clickable-area {
     cursor: pointer;
   }
-  code {
-    color: $white
+  .landing-instruction {
+    color: $white;
+    margin: 1rem .25rem 0rem .25rem;
   }
 
 }
@@ -24,7 +25,7 @@ $border-radius: .7rem;
 
 
   margin: 1rem;
-  max-width: 400px;
+  max-width: 21rem;
   width: calc(100% - 2rem);
   flex-direction: column;
 
@@ -76,7 +77,7 @@ $border-radius: .7rem;
   flex: 1;
   display: block;
   height: 15rem;
-  width: 25rem;
+  width: 21rem;
   padding: 1rem;
   p {
     margin: 0rem;
